--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
     </nav>
 
     <div class="TopOfIndex">
-<h1 class="heroname">Connor Easts Portfolio</h1>
+<h1 class="heroname">Connor East's Portfolio</h1>
 <div class="trapezoid1"></div>
     </div>
 
 <div class="Aboutme">
 <h1 class="title">About Me</h1>
 <img src="images/me.jpg" alt="" class="AboutMeImage">
-<p>Hello, my name is Connor East, and I'm up an coming web designer who loves creative design and relaxing. Although I am still in high school, I have had many life experiences others have not. This ranges from moving across the world to working in an understaffed Subway. I hope to be successful in school and in my future career in every way possible. After I finish school, I plan to attend the Community College of Vermont until I have completed all the necessary undergraduate classes. After I have finished any undergraduate classes I will be transferring to a Colledge with the specific classes I'm looking for.</p>
+<p>Hello, my name is Connor East, and I'm up and coming web designer who loves creative design and relaxing. Although I am still in high school, I have had many life experiences others have not. This ranges from moving across the world to working in an understaffed Subway. I hope to be successful in school and in my future career in every way possible. After I finish school, I plan to attend Community College of Vermont until I have completed all the necessary undergraduate classes. After I have finished any undergraduate classes I will be transferring to a College with the specific classes I'm looking for.</p>
 </div>
 <footer>
 <h3 onclick="showinfo()">Contact Information</h3>
