--- a/MyFuture.html
+++ b/MyFuture.html
@@ -34,14 +34,15 @@
     </div>
     <div class="trapezoid2"></div>
     <div class="MyFutureGreyMain">
-
-
-
+<h2>My Future Path.</h2>
+<embed src="images\MyPath.pdf">
 
 
 
     </div>
     <footer>
+
+
     <h3 onclick="showinfo()">Contact Information</h3>
     <ul id="footerlist">
       <li>luckylapislove@gmail.com</li>
