--- a/CommunityService.html
+++ b/CommunityService.html
@@ -7,7 +7,7 @@
     <script src=js/script.js></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Connor-T-East">
-    <title>Future Plans</title>
+    <title>Community Service</title>
   </head>
   <body>
       <div class="Logo1" id="logo" onClick="navclose()"><img src="images/snowglobe.svg" alt="Connors Logo"></div>
@@ -34,7 +34,8 @@
     </div>
     <div class="trapezoid2"></div>
     <div class="CommunityServiceMain">
-
+      <h2 class="center">Past Community Service Reflection Paper.</h2>
+<embed src ="images/VolunteerReflection.pdf" class="reflection">
 
 
 
